--- a/style/style.css
+++ b/style/style.css
@@ -107,7 +107,7 @@ body main header .middle .menu {
 body main header .middle .menu .including {
   width: 100%;
   height: 20%;
-  gap: 30px;
+  gap: 19px;
   align-items: center;
   justify-content: center;
 }
@@ -117,17 +117,22 @@ body main header .middle .menu .box-food {
   background-color: #417F56;
   border-radius: 6px;
   align-items: end;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   justify-content: center;
 }
-body main header .middle .click {
+body main header .middle .menu .middle-images {
+  justify-content: center;
+}
+body main header .middle .menu .middle-images img {
+  width: 120%;
+}
+body main header .middle .menu .click {
   width: 100%;
   height: 20%;
   justify-content: space-around;
-  gap: 40px;
-  grid-row: 100%;
+  gap: 60px;
 }
-body main header .middle .click button {
+body main header .middle .menu .click button {
   width: 155px;
   height: 48px;
   border-radius: 4px;
